--- a/appproject/accounts/templates/system/system_create.html
+++ b/appproject/accounts/templates/system/system_create.html
@@ -99,8 +99,8 @@
 
       <div class="form-row">
         <label for="systemName">システム名 <span aria-hidden="true">※</span></label>
-        <input id="systemName" name="system_name" type="text" placeholder="例：顧客管理システム" maxlength="120" required aria-required="true" />
-        <div class="hint" id="nameHint">最大120文字</div>
+        <input id="systemName" name="system_name" type="text" placeholder="例：顧客管理システム" maxlength="20" required aria-required="true" />
+        <div class="hint" id="nameHint">必須（最大20文字）</div>
         <div class="error" id="nameError">このフィールドに入力してください</div>
       </div>
 
