--- a/appproject/accounts/templates/system/system_delete.html
+++ b/appproject/accounts/templates/system/system_delete.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="form-row">
-          <label for="created-at">作成日時</label>
+          <label for="created-at">作成日</label>
           <input id="created-at" name="created_at" type="text" value="{{ created_at|date:'Y年n月j日 H:i' }}" disabled aria-disabled="true" />
         </div>
 
