--- a/appproject/codemon/templates/base.html
+++ b/appproject/codemon/templates/base.html
@@ -559,7 +559,7 @@
       ],
       // アルゴリズム: 新しい遷移先（block_choice）と既存の下層URLの両方をアクティブ対象に含める
       'tab-algorithms': [
-        '/accounts/block/choice/',
+        '/accounts/block/',
         '/codemon/algorithms/', '/codemon/blocks/'
       ],
       'tab-checklist': ['/codemon/checklists/'],
